--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "biome format --write .",
+		"lint": "biome lint --check .",
+		"lint:fix": "biome check --write .",
 		"preview": "vite preview",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
